--- a/app/src/main/res/layout/content_list_view.xml
+++ b/app/src/main/res/layout/content_list_view.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.gmail.ooad.flashcards.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.gmail.ooad.flashcards.cards.PackageListActivity"
+    tools:showIn="@layout/app_bar_list_view">
 
     <ListView
-        android:id="@+id/packagesList"
+        android:id="@+id/recordList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:animateLayoutChanges="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
