--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="add_package_color_preview_height">30dp</dimen>
+    <dimen name="add_package_color_preview_width">40dp</dimen>
+    <dimen name="font_size">18sp</dimen>
+    <dimen name="add_package_color_margin">5dp</dimen>
+    <dimen name="add_package_color_preview_margin">5dp</dimen>
 </resources>
