--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -9,5 +9,5 @@
 
     <include layout="@layout/toolbar" />
 
-    <include layout="@layout/content_edit_card" />
+    <include layout="@layout/content_add_card" />
 </LinearLayout>
