--- a/app/src/main/res/layout/content_add_card.xml
+++ b/app/src/main/res/layout/content_add_card.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_card_name"
+            android:id="@+id/card_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_card_front"
+            android:id="@+id/card_front"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edit_card_back"
+            android:id="@+id/card_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
