--- a/app/src/main/res/layout/content_add_package.xml
+++ b/app/src/main/res/layout/content_add_package.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/add_package_name_hint"
+            android:inputType="textCapSentences"
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
