--- a/app/src/main/res/drawable/color_preview.xml
+++ b/app/src/main/res/drawable/color_preview.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle" android:padding="10dp">
     <!-- you can use any color you want I used here gray color-->
     <solid android:color="#c2c2c2"/>
-    <stroke android:width="5px" android:color="#FF000000"/>
+    <stroke android:width="1px" android:color="#616161"/>
     <corners android:radius="0dp"/>
 </shape>
