--- a/app/src/main/res/layout/activity_card_view.xml
+++ b/app/src/main/res/layout/activity_card_view.xml
@@ -8,28 +8,37 @@
 
     <include layout="@layout/toolbar" />
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/card_view_frame"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".cards.CardViewActivity" >
+        android:layout_height="match_parent" />
 
-        <FrameLayout
-            android:id="@+id/card_back"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <include layout="@layout/fragment_card_back" />
-        </FrameLayout>
+    <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:tools="http://schemas.android.com/tools"-->
+        <!--android:id="@+id/card_view_frame"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:clickable="true"-->
+        <!--android:focusable="true">-->
 
-        <FrameLayout
-            android:id="@+id/card_front"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-            <include layout="@layout/fragment_card_front" />
-        </FrameLayout>
+        <!--<FrameLayout-->
+            <!--android:id="@+id/card_back"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:clickable="false"-->
+            <!--android:focusable="false">-->
+            <!--<include layout="@layout/fragment_card_back" />-->
+        <!--</FrameLayout>-->
 
-    </FrameLayout>
+        <!--<FrameLayout-->
+            <!--android:id="@+id/card_front"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center"-->
+            <!--android:duplicateParentState="true">-->
+            <!--<include layout="@layout/fragment_card_front" />-->
+        <!--</FrameLayout>-->
+
+    <!--</FrameLayout>-->
 
 </LinearLayout>
