--- a/app/src/main/res/layout/fragment_card_back.xml
+++ b/app/src/main/res/layout/fragment_card_back.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/bg_back"
@@ -16,16 +13,15 @@
         android:contentDescription="@string/card_background_desc" />
 
     <RelativeLayout
-        android:id="@+id/card_view_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="24dp" >
+        android:padding="24dp">
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_centerVertical="true" >
+            android:layout_centerVertical="true">
 
             <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/text_back"
