--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="add_package_color_margin">5dp</dimen>
     <dimen name="add_package_color_preview_margin">5dp</dimen>
     <dimen name="elevation">4dp</dimen>
+    <dimen name="add_package_color_padding">5dp</dimen>
 </resources>
