Proxy classes, basic slide show #5

--- a/app/src/main/res/layout/fragment_card_back.xml
+++ b/app/src/main/res/layout/fragment_card_back.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:tint="@color/colorPrimary"
         android:padding="16dp"
-        android:src="@drawable/rectangle"
+        android:src="@drawable/rectangle_card_bg"
         android:contentDescription="@string/card_background_desc" />
 
     <RelativeLayout
