--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="add_package_color_preview_margin">5dp</dimen>
     <dimen name="elevation">4dp</dimen>
     <dimen name="add_package_color_padding">5dp</dimen>
+    <dimen name="slide_show_container_padding">16dp</dimen>
 </resources>
