--- a/app/src/main/res/layout/activity_slide_show.xml
+++ b/app/src/main/res/layout/activity_slide_show.xml
@@ -3,44 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".slideshow.SlideShowActivity">
 
     <include layout="@layout/toolbar" />
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/bg_memorized"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:tint="@color/colorMemorized"
-                android:src="@drawable/rectangle_slide_show_bg"
-                android:contentDescription="@string/slideshow_bg_memorized_desc"
-                android:layout_weight="1" />
-
-            <ImageView
-                android:id="@+id/bg_unmemorized"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:tint="@color/colorUnmemorized"
-                android:src="@drawable/rectangle_slide_show_bg"
-                android:contentDescription="@string/slideshow_bg_unmemorized_desc"
-                android:layout_weight="1" />
-
-        </LinearLayout>
-
-        <FrameLayout
+        <com.yuyakaido.android.cardstackview.CardStackView
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/slide_show_container_padding" />
+            app:swipeDirection="horizontal"
+            app:leftOverlay="@layout/card_overlay_left"
+            app:rightOverlay="@layout/card_overlay_right"
+            app:swipeThreshold="0.5"/>
+
+        <ProgressBar
+            android:id="@+id/slide_show_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <FrameLayout
+            android:id="@+id/slide_show_statistics_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </FrameLayout>
 
