--- a/app/src/main/res/layout/fragment_slide_show_statistics.xml
+++ b/app/src/main/res/layout/fragment_slide_show_statistics.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".slideshow.SlideShowStatisticsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".slideshow.SlideShowStatisticsFragment">
-
-    <ImageView
-        android:id="@+id/bg_memorized"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:tint="@color/colorPrimaryLight"
-        android:src="@drawable/rectangle_slide_show_bg"
-        android:contentDescription="@string/slideshow_bg_statistics_desc" />
+    android:background="@color/colorPrimaryLight">
 
     <TextView
         android:layout_width="wrap_content"
