--- a/app/src/main/res/menu/list_view_menu.xml
+++ b/app/src/main/res/menu/list_view_menu.xml
@@ -6,14 +6,14 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/menu_action_settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="90"
         android:icon="@drawable/ic_edit_24dp"
-        android:title="@string/menu_selection_edit"
+        android:title="@string/menu_action_edit"
         app:showAsAction="ifRoom"
         />
 
@@ -21,7 +21,7 @@
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:icon="@drawable/ic_delete_24dp"
-        android:title="@string/menu_selection_edit"
+        android:title="@string/menu_action_delete"
         app:showAsAction="ifRoom"
         />
 
