Fixed edit activities #15, #11. Partially implemented #12. Fixed menus.

--- a/app/src/main/res/menu/package_list_menu.xml
+++ b/app/src/main/res/menu/package_list_menu.xml
@@ -5,9 +5,9 @@
 
     <item
         android:id="@+id/action_slide_show"
-        android:orderInCategory="95"
+        android:orderInCategory="85"
         android:icon="@drawable/ic_slideshow_24dp"
         android:title="@string/menu_action_run_slide_show"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
 </menu>
