--- a/app/src/main/res/menu/editable_list_view_menu.xml
+++ b/app/src/main/res/menu/editable_list_view_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:animateLayoutChanges="true">
 
     <item
@@ -8,15 +9,15 @@
         android:orderInCategory="90"
         android:icon="@drawable/ic_edit_24dp"
         android:title="@string/menu_action_edit"
-        app:showAsAction="ifRoom"
-        />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:icon="@drawable/ic_delete_24dp"
         android:title="@string/menu_action_delete"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         />
 
 </menu>
