--- a/flipablecardview/src/main/res/layout/fragment_card_front.xml
+++ b/flipablecardview/src/main/res/layout/fragment_card_front.xml
@@ -11,7 +11,7 @@
     card_view:cardUseCompatPadding="true"
     card_view:contentPadding="8dp"
     card_view:cardPreventCornerOverlap="true"
-    card_view:cardBackgroundColor="@color/colorPrimary">
+    card_view:cardBackgroundColor="@color/colorDefault">
 
     <ScrollView
         android:layout_width="match_parent"
