--- a/app/src/main/res/layout/content_add_card.xml
+++ b/app/src/main/res/layout/content_add_card.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.gmail.ooad.flashcards.cards.TextInputEditTextEx
                     android:id="@+id/card_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.gmail.ooad.flashcards.cards.TextInputEditTextEx
                     android:id="@+id/card_front"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputEditText
+                <com.gmail.ooad.flashcards.cards.TextInputEditTextEx
                     android:id="@+id/card_back"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
