--- a/app/src/main/res/layout/content_add_package.xml
+++ b/app/src/main/res/layout/content_add_package.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
