--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimaryLight">#ffd54f</color>
     <color name="colorPrimary">#ffc107</color>
     <color name="colorPrimaryDark">#ffa000</color>
-    <color name="colorAccent">#ff6f00</color>
+    <color name="colorAccent">#ffd740</color>
     <color name="colorMemorized">@android:color/holo_green_light</color>
     <color name="colorUnmemorized">@android:color/holo_red_light</color>
     <color name="card_overlay_bg_color">#88000000</color>
