--- a/app/src/main/res/drawable/color_preview.xml
+++ b/app/src/main/res/drawable/color_preview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
+    android:shape="oval" android:padding="10dp">
     <solid android:color="#c2c2c2"/>
     <stroke android:width="1px" android:color="#616161"/>
     <corners android:radius="0dp"/>
