--- a/flipablecardview/src/main/res/layout/card_view_front.xml
+++ b/flipablecardview/src/main/res/layout/card_view_front.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_gravity="center"
-    android:layout_centerVertical="true">
-
-    <com.github.irshulx.Editor
-        android:id="@+id/view_front"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:render_type="Renderer"/>
-</android.support.v4.widget.NestedScrollView>
+<com.even.mricheditor.RichViewer xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/view_front"
+android:layout_width="match_parent"
+android:layout_height="match_parent" />
